--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
     "material-ui": "0.20.0",
+    "moment": "2.24.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "5.0.6",
